fixed new task input misalignment

--- a/src/components/PomodoroApp/Tasks/NewTaskInput/NewTaskInput.styles.scss
+++ b/src/components/PomodoroApp/Tasks/NewTaskInput/NewTaskInput.styles.scss
@@ -1,6 +1,7 @@
 .new-task-form {
   display: flex;
   gap: 1rem;
+  justify-content: center;
 
   margin-block: 1rem 3rem;
 
